# script_launcher_scheduler

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/data/: tasks.db
app/templates/: index.html
scripts/: format_and_stage.py  log_generator.py
tests/: test_main.py
